--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"MukulCraft.aternos.me",
+	"ip":"MukulCraft.aternos.me:24540",
 	"port": "24540",
 	"name": "coolboy",
 	"auto-night-skip":"true"
